--- a/requirements-in.txt
+++ b/requirements-in.txt
@@ -23,6 +23,7 @@ pyasn1>=0.1.8
 pyasn1-modules>=0.0.7
 service_identity>=14.0.0
 PyNaCl>=1.0.1
-treq>=15.1.0
+treq==15.1.0
+incremental==15.3.0
 setproctitle>=1.1.9
 watchdog>=0.8.3
